<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="reader">XYZ Reader</string>
    <string name="builder">Build It Bigger</string>
    <string name="library">Library App</string>
    <string name="score">Scores App</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="toast_message">This button will launch my&#160;</string>
</resources>
