<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/btnSpotify"
        android:onClick="displayToast"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/btn_background"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/btnScore"
        android:onClick="displayToast"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/btn_background"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/btnLibrary"
        android:onClick="displayToast"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/btn_background"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/builder"
        android:id="@+id/btnBuild"
        android:onClick="displayToast"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/btn_background"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reader"
        android:id="@+id/btnReader"
        android:onClick="displayToast"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/btn_background"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/btnCapstone"
        android:onClick="displayToast"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/btn_final"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffffff" />
</LinearLayout>
